adding my search for city card using bootsrap

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <h1>Search for a City:</h1>
             <input class="search-location" type="text">
           </blockquote>
+          <div id="searchResults" class="locationList">
+            <p>Parkcity</p>
+          </div>
         </div>
       </div>
 </body>
