styling card with css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="card-body">
           <blockquote class="blockquote mb-0">
             <h1>Search for a City:</h1>
-            <input class="search-location" type="text">
+            <input type="sybmit" class="search">
+            <button id="search">Search</button>
           </blockquote>
           <div id="searchResults" class="locationList">
             <p>Parkcity</p>
