--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         <div class="dayForecast-card">
             <div class="row">
                 <div class="col-lg-2">
-                    <div>1</div>
+                    <div class="forecast">1</div>
                 </div>
                 <div class="col-lg-2">
-                    <div>2</div>
+                    <div class="forecast">2</div>
                 </div>
                 <div class="col-lg-2">
-                    <div>3</div>
+                    <div class="forecast">3</div>
                 </div>
                 <div class="col-lg-2">
-                    <div>4</div>
+                    <div class="forecast">4</div>
                 </div>
             </div>
           
